--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="back1.css"> 
+<link rel="stylesheet" type="text/css" href="back1.css">
 
 <p><img src="https://portal.wecreatestuff.com/portallogowide.jpg" width="696" height="153" style="display: block; margin-left: auto; margin-right: auto;" /></p>
 <p></p>
