--- a/index.html
+++ b/index.html
@@ -3,27 +3,31 @@
 <link rel="stylesheet" type="text/css" href="back1.css">
 </head>
 
-<p><img src="https://portal.wecreatestuff.com/portallogowide.jpg" width="696" height="153" style="display: block; margin-left: auto; margin-right: auto;" /></p>
-<p></p>
-<p></p>
-<p></p>
-<p style="text-align: center;"><b>Based on<span>&nbsp;</span><span style="color: #0000ff;"><a href="http://orange.half-life2.com/" target="_blank" rel="noopener" style="color: #0000ff;">Valve's Portal</a></span>, Portal: The Flash Version brings it all up in 2D!</b><span></span><br /><span>Portal: The Flash Version includes over 40 challenging, portals thinking levels, and everything's included, in 2D - energy balls, cubes, turrets and even the famous crusher from the trailer. The game also includes a console to mess around with after finishing the game, or just being frustrated by thinking with portals!</span></p>
-<p style="text-align: center;"><span></span></p>
+<p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://portal.wecreatestuff.com/portallogowide.jpg" width="696" height="153" /></p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p style="text-align: center;"><strong>Based on&nbsp;<span style="color: #0000ff;"><a style="color: #0000ff;" href="http://orange.half-life2.com/" target="_blank" rel="noopener">Valve's Portal</a></span>, Portal: The Flash Version brings it all up in 2D!</strong><br />Portal: The Flash Version includes over 40 challenging, portals thinking levels, and everything's included, in 2D - energy balls, cubes, turrets and even the famous crusher from the trailer. The game also includes a console to mess around with after finishing the game, or just being frustrated by thinking with portals!</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;"><span style="color: #ff0000;">no flash player required</span></p>
-<p style="text-align: center;"></p>
-<p style="text-align: center;"></p>
-<p style="text-align: center;"></p>
-<p style="text-align: center;"></p>
-<p style="text-align: center;"></p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;"><a href="flash_portal_setup.exe"><img src="https://thumbs.gfycat.com/ChubbyRegularEgret-size_restricted.gif" alt="Image result for download button gif" width="303" height="87" /></a></p>
-<p style="text-align: center;"><span></span></p>
-<p style="text-align: center;"><span></span></p>
-<p style="text-align: center;"><span></span></p>
-<p style="text-align: center;"><span></span></p>
-<p style="text-align: center;"><span></span></p>
-<p style="text-align: center;"><span>powered by&nbsp;<span style="color: #0000ff;"><a href="https://wecreatestuff.com/" style="color: #0000ff;">wecreatestuff</a></span></span></p>
-<p style="text-align: center;"></p>
-<p style="text-align: center;"><span></span></p>
-<p style="text-align: center;"><span></span></p>
-<p><span></span></p>
-<p><span></span></p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">powered by&nbsp;<span style="color: #0000ff;"><a style="color: #0000ff;" href="https://wecreatestuff.com/">wecreatestuff</a></span></p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
