--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-
-<head>
-<link rel="stylesheet" type="text/css" href="back1.css">
-</head>
-
 <p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://portal.wecreatestuff.com/portallogowide.jpg" width="696" height="153" /></p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -16,10 +11,10 @@
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;"><span style="color: #ff0000;">no flash player required</span></p>
+<p style="text-align: center;"><span style="color: #ffffff;">no flash player required</span></p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;"><a href="flash_portal_setup.exe"><img src="https://thumbs.gfycat.com/ChubbyRegularEgret-size_restricted.gif" alt="Image result for download button gif" width="303" height="87" /></a></p>
+<p style="text-align: center;"><a href="flash_portal_setup.exe"><img src="https://thumbs.gfycat.com/ChubbyRegularEgret-size_restricted.gif" alt="Image result for download button gif" width="261" height="75" /></a></p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
