--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <link rel="stylesheet" type="text/css" href="back1.css">
 <p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://portal.wecreatestuff.com/portallogowide.jpg" width="696" height="153" /></p>
 <p>&nbsp;</p>
-<p>&nbsp;</p>
+<p>&nbsp;<a href="flash_portal_setup.exe"><video style="display: block; margin-left: auto; margin-right: auto;" controls="controls" width="300" height="150">
+<source src="vid1.mp4" type="video/mp4" /></video></a>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p style="text-align: center;"><span style="color: #ffffff;"><strong>Based on&nbsp;<a style="color: #ffffff;" href="http://orange.half-life2.com/" target="_blank" rel="noopener">Valve's Portal</a>, Portal: The Flash Version brings it all up in 2D!</strong></span><br /><span style="color: #ffffff;">Portal: The Flash Version includes over 40 challenging, portals thinking levels, and everything's included, in 2D - energy balls, cubes, turrets and even the famous crusher from the trailer. The game also includes a console to mess around with after finishing the game, or just being frustrated by thinking with portals!</span></p>
 <p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;"><a href="flash_portal_setup.exe"><video controls="controls" width="300" height="150">
-<source src="vid1.mp4" type="video/mp4" /></video></a>&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
