--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <link rel="stylesheet" type="text/css" href="back1.css">
 <p><img style="display: block; margin-left: auto; margin-right: auto;" src="https://portal.wecreatestuff.com/portallogowide.jpg" width="696" height="153" /></p>
 <p>&nbsp;</p>
-<p>&nbsp;<a href="flash_portal_setup.exe"><video style="display: block; margin-left: auto; margin-right: auto;" controls="controls" width="300" height="150">
-<source src="vid1.mp4" type="video/mp4" /></video></a>&nbsp;</p>
+<p>&nbsp;<video style="display: block; margin-left: auto; margin-right: auto;" controls="controls" width="300" height="150">
+<source src="vid1.mp4" type="video/mp4" /></video>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
