--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>&nbsp;</p>
+<p>&nbsp;<a href="flash_portal_setup.exe"><img style="display: block; margin-left: auto; margin-right: auto;" src="https://lh3.googleusercontent.com/proxy/LShHP5E4C-phvNYwgHZkGxrBbRg6hVVxMcH-dY6X21q7-_uQbihfaWPBTpFc--JbzSY3WarNTsjPtXqxez-gqBORX7uaDlSgYroUggj5mgNGjiUfwqnMIWP0ryk" alt="" width="133" height="53" /></a></p>
 <p style="text-align: center;"><span style="color: #ffffff;"><strong>Based on&nbsp;<a style="color: #ffffff;" href="http://orange.half-life2.com/" target="_blank" rel="noopener">Valve's Portal</a>, Portal: The Flash Version brings it all up in 2D!</strong></span><br /><span style="color: #ffffff;">Portal: The Flash Version includes over 40 challenging, portals thinking levels, and everything's included, in 2D - energy balls, cubes, turrets and even the famous crusher from the trailer. The game also includes a console to mess around with after finishing the game, or just being frustrated by thinking with portals!</span></p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
@@ -17,7 +17,6 @@
 <p style="text-align: center;"><span style="color: #ffffff;">no flash player required</span></p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;"><a href="flash_portal_setup.exe"><img src="https://thumbs.gfycat.com/ChubbyRegularEgret-size_restricted.gif" alt="Image result for download button gif" width="261" height="75" /></a></p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
