--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
-<p><embed src="game.swf" width="506" height="367"></embed></p>
+<p><embed style="display: block; margin-left: auto; margin-right: auto;" src="game.swf" width="641" height="465"></embed></p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">&nbsp;</p>
