--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<h2 style="text-align: center;"><a href="flash_portal_setup.exe"><input name="1" type="button" value="download" /></a></h2>
+<h2><a href="https://relaxed-sammet-aec691.netlify.com/flash_portal_setup.exe"><input alt="image url not valid" src="https://relaxed-sammet-aec691.netlify.com/1.jpg" style="width: 100px; height: 100px;" type="image" /></a></h2>
 
 <p style="text-align: center;"><span style="color: #ffffff;"><strong>Based on&nbsp;<a style="color: #ffffff;" href="http://orange.half-life2.com/" target="_blank" rel="noopener">Valve's Portal</a>, Portal: The Flash Version brings it all up in 2D!</strong></span><br /><span style="color: #ffffff;">Portal: The Flash Version includes over 40 challenging, portals thinking levels, and everything's included, in 2D - energy balls, cubes, turrets and even the famous crusher from the trailer. The game also includes a console to mess around with after finishing the game, or just being frustrated by thinking with portals!</span></p>
 <p style="text-align: center;">&nbsp;</p>
